--- a/angular.json
+++ b/angular.json
@@ -145,6 +145,10 @@
               "devServerTarget": "requests-http:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
     }
